--- a/style.css
+++ b/style.css
@@ -268,6 +268,8 @@ vertical-align:top;
 
 article {  
     display: block;  
+	font: 12px Arial, Helvetica, sans-serif;
+	font-size: 13px;
 }
 
 #footer
